--- a/cariumaFes.html
+++ b/cariumaFes.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>女士时尚-FarFetch中国官网</title>
+    <title>Cariuma</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/indexS.css">
+    <link rel="stylesheet" href="css/cariumaFes.css">
 </head>
-
 <body>
     <header>
         <div id="head">
@@ -99,193 +97,120 @@
                     <a href="#" target="_blank">了解详情</a>
                 </div>
             </div>
-            <div id="bannerWrap">
-                <div class="bannerCon">
-                    <img src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1152272/data/9d6f82aa585fc718d0d9be3d0becfe7c.jpg?ratio=4x1_messaging-under&minWidth=1274"">
+            <div id="skiPage">
+                <div class="skiPageCon">
+                    <img src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1145750/data/08652163bd8e862572105775e51315b4.jpg?ratio=16x9_under&minWidth=1142">
+                </div>
+                <div class="skiTit">
+                    <h2>Cariuma：<br>
+                        一双懂你的滑板鞋</h2>
+                        <p>滑板玩家 @janthavy 演绎</p>
                 </div>
             </div>
-            <div id="vip">
-                    <a href="#" title="VIP五一私享折扣">VIP五一私享折扣</a>
-                    <a href="#" title="VIP五一私享折扣">低至6折，唯你优享！</a>
-                </div>
-                <div id="story">
-                    <a href="#" title="听听他们的故事，买手店推荐">
-                        <img src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1144294/data/11649732aa4a4ebe0c2e3508bead6291.jpg?ratio=16x9_under&minWidth=1142"
-                            alt="">
-                    </a>
+            <div id="cariumaShoe">
+                <section class="shoesShow">
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/66/21/14606621_23929845_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>Catiba板鞋</em>
+                            <b>￥ 938</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/65/95/14606595_23929831_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>OCA 条纹贴花对比缝线板鞋</em>
+                            <b>￥ 758</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/65/90/14606590_24479842_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>OCA 条纹贴花豹纹板鞋</em>
+                            <b>￥ 938</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/66/05/14606605_22501359_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>Catiba高帮板鞋</em>
+                            <b>￥ 1,138</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/15/07/28/47/15072847_25957383_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>OCA 帆布高帮板鞋 </em>
+                            <b>￥ 938</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/66/20/14606620_24486782_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>绒面皮拼接板鞋</em>
+                            <b>￥ 938</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/65/86/14606586_24479828_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>OCA 条纹贴花拼接板鞋</em>
+                            <b>￥ 758</b>
+                        </div>
+                    </article>
+                    <article>
+                        <a class="shoeImg" href="#">
+                            <img src="https://cdn-images.farfetch-contents.com/14/60/66/51/14606651_22505706_480.jpg">
+                        </a>
+                        <div class="shoeDetail">
+                            <h5>CARIUMA</h5>
+                            <em>OCA板鞋</em>
+                            <b>￥ 758</b>
+                        </div>
+                    </article>
+                </section>
+            </div>
+            <div id="goShop">
+                <a href="#">
+                    逛逛Cariuma
+                </a>
+            </div>
+            <div id="story">
+                <div class="storyCon">
                     <div class="storyTxt">
-                        <a href="#" title="听听他们的故事，买手店推荐">
-                            <h3>听听他们的故事：买手店推荐</h3>
-                            <p>当下正处非常时期，尽管很多与我们合作的买手店闭店谢客，但他们仍在 Farfetch 上持续为大家服务。本周我们将延续上回专题，继续带你了解东京 Restir、纽约
-                                Hirshleifers 和 Kirna Zabête 这 3 家买手店店主创店背后的故事，以及他们如何应对当前艰难时刻。</p>
-                        </a>
+                        <h3>“我 17 岁的时候就开始玩滑板了。”</h3>
+                        <p>“我好友家里的后院有废弃的大铁管，出于好奇我拿起滑板在铁管上滑了约 20 次，从那之后我便疯狂爱上滑板。圣诞节时我表哥还送我一个滑板作为礼物，我开始勤奋地每天练习。如今滑板已成为我生活中的热情。”</p>
+                    </div>
+                    <div class="storyPic">
+                        <img src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1145850/data/dfdd90754f1949703ef904471f9a734b.jpg?ratio=16x9_side-left&minWidth=850">
                     </div>
                 </div>
-                <div id="buyer">
-                    <div class="buyerCon">
-                        <div class="buyerConL">
-                            <a href="cariumaFes.html" title="Cariuma：一双懂你的滑板鞋">
-                                <img
-                                    src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1160880/data/6dc3feb8f5eaae575b912c35a686efdd.jpg?ratio=1x1_two-columns&minWidth=637">
-                            </a>
-                            <div class="buyerCar">
-                                <a href="#" title="Cariuma：一双懂你的滑板鞋">
-                                    <h2>Cariuma：一双懂你的滑板鞋</h2>
-                                    <h3>滑板玩家@janthavy演绎</h3>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="buyerConR">
-                            <a href="#">
-
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div id="new">
-                    <h3>新品上架/每日手选全球好物</h3>
-                    <div class="newGoods">
-                        <div class="newGoodsList">
-                            <figure>
-                                <a href="#" title="超大款西装夹克">
-                                    <img
-                                        src="https://cdn-images.farfetch-contents.com/14/76/69/91/14766991_27075508_480.jpg">
-                                </a>
-                                <figcaption>
-                                    <h4>Maison Margiela</h4>
-                                    <h5>超大款西装夹克</h5>
-                                    <span>￥ 13,740</span>
-                                </figcaption>
-                            </figure>
-                            <figure>
-                                <a href="#" title="Tambour斜挎包">
-                                    <img
-                                        src="https://cdn-images.farfetch-contents.com/15/03/19/99/15031999_27066465_480.jpg">
-                                </a>
-                                <figcaption>
-                                    <h4>Elleme</h4>
-                                    <h5>Tambour斜挎包</h5>
-                                    <span>￥ 3,297</span>
-                                </figcaption>
-                            </figure>
-                            <figure>
-                                <a href="#" title="中腰直筒牛仔裤">
-                                    <img
-                                        src="https://cdn-images.farfetch-contents.com/15/30/15/54/15301554_26794234_480.jpg">
-                                </a>
-                                <figcaption>
-                                    <h4>Fendi</h4>
-                                    <h5>中腰直筒牛仔裤</h5>
-                                    <span>￥ 5,475</span>
-                                </figcaption>
-                            </figure>
-                            <figure>
-                                <a href="#" title="Feminine Waves 吊饰耳环">
-                                    <img
-                                        src="https://cdn-images.farfetch-contents.com/14/76/12/37/14761237_27025483_255.jpg">
-                                </a>
-                                <figcaption>
-                                    <h4>Joanna Laura Constantine</h4>
-                                    <h5>Feminine Waves 吊饰耳环</h5>
-                                    <span>￥ 1,583</span>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="goShop">
-                        <a href="#">
-                            去逛逛
-                        </a>
-                    </div>
-                </div>
-                <div id="yellow">
-                    <div class="yellowCon">
-                        <figure>
-                            <a href="#" title="宅够了？动起来！">
-                                <img
-                                    src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1144376/data/4dad6e351debc49d209c7fc8827b8073.jpg?ratio=1x1_three-columns&minWidth=409">
-                            </a>
-                            <figcaption>
-                                <h3>宅够了？动起来！</h3>
-                                <p>重启 2020 运动新风尚</p>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <a href="#" title="表达爱意的千种方式">
-                                <img
-                                    src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1144404/data/c47e769714a9900cce74662e1b9ae790.jpg?ratio=1x1_three-columns&minWidth=409">
-                            </a>
-                            <figcaption>
-                                <h3>表达爱意的千种方式</h3>
-                                <p>TA喜欢什么，我们知道</p>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <a href="#" title="宅家也有仪式感">
-                                <img
-                                    src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1144430/data/67336682add074e6cc19db60ddb78bd0.jpg?ratio=1x1_three-columns&minWidth=409">
-                            </a>
-                            <figcaption>
-                                <h3>宅家也有仪式感</h3>
-                                <p>穿着 Joseph，Totême 和 Olivia Von Halle 的睡衣在家办公是何种体验？</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-                </div>
-                <div id="gift">
-                    <div class="giftCon">
-                        <figure>
-                            <a href="#" title="简约的永恒魅力">
-                                <img
-                                    src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1144490/data/a98de446b32868226247d03919187dd9.jpg?ratio=1x1_two-columns&minWidth=637">
-                            </a>
-                            <figcaption class="giftConTit">
-                                <a href="#" title="简约的永恒魅力">
-                                    <h3>简约的永恒魅力</h3>
-                                    <p>极简风单品打造夏天不费力的时髦，逛逛 Jil Sander、Nanushka 和 Victoria Beckham</p>
-                                </a>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <a href="#" title="把对她的思念，装进礼物里">
-                                <img
-                                    src="https://cdn-static.farfetch-contents.com/cms-cm/cn/media/1144536/data/0f75725482c771f65c867e1425f842f1.jpg?ratio=1x1_two-columns&minWidth=637">
-                            </a>
-                            <figcaption class="giftConTit">
-                                <a href="#" title="把对她的思念，装进礼物里">
-                                    <h3>把对她的思念，装进礼物里</h3>
-                                    <p>随时随地表达对妈妈的爱</p>
-                                </a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <div id="container">
-            <div class="containerCon">
-                <p>
-                    <a href="#" title="How to shop">
-                        <i class="iconfont icon-yijia"></i>
-                        如何购物
-                    </a>
-                </p>
-                <p>
-                    <a href="#" title="FAQ's">
-                        <i class="iconfont icon-wenhao"></i>
-                        常见问题
-                    </a>
-                </p>
-                <p>
-                    <a href="#" title="Need help?">
-                        <i class="iconfont icon-liaotian1"></i>
-                        需要帮助
-                    </a>
-                </p>
-            </div>
-        </div>
         <div id="newsLetter">
             <div class="letterTxt">
                 <h2>好事就想与您分享</h2>
@@ -400,7 +325,6 @@
         </div>
     </footer>
 </body>
-
 </html>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/index.js"></script>
